--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-freezeframe": "^4.1.3",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "latest",
     "typewriter-effect": "^2.13.1"
   },
   "scripts": {
@@ -20,9 +21,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "react-scripts": "latest"
   },
   "browserslist": {
     "production": [
