--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -6,7 +6,10 @@
     "@babel/runtime": "^7.11.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
     "freezeframe": "^4.1.3",
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
@@ -14,7 +17,8 @@
     "react-freezeframe": "^4.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "latest",
-    "typewriter-effect": "^2.13.1"
+    "react-typewriting-effect": "^1.0.4",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
