--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/webpack-env": "^1.15.2",
     "freezeframe": "^4.1.3",
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
