--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/webpack-env": "^1.15.2",
-    "freezeframe": "^4.1.3",
+    "freezeframe": "^5.0.0-beta.1",
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
