--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-typist": "^2.0.1",
     "@types/webpack-env": "^1.15.2",
     "freezeframe": "^5.0.0-beta.1",
     "material-ui": "^0.20.2",
@@ -20,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "latest",
     "react-typewriting-effect": "^1.0.4",
+    "react-typist": "^2.0.5",
     "typescript": "^4.0.2"
   },
   "scripts": {
